# gaime

./: .env  .gitignore  README.md  bench.sh  docker-compose.dev.yml  docker-compose.yml  simple-market.sh
client/: Dockerfile  package-lock.json  package.json
client/src/: index.html  styles.scss
client/src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.module.ts
database/: README.md  create.sql  drop.sql  insert-mock-admins.sql  insert-mock-user-game-keys.sql  insert.sql  select.sql  set-mock-game-keys.sql  test.sh
diagrams/: match-making.uxf
games/luck/server/: Cargo.toml  Dockerfile
games/luck/server/src/: client_error.rs  error.rs  game.rs  main.rs  types.rs
games/luck/server/src/api/: data.rs  response.rs
games/luck/server/src/client/: data.rs  request.rs  response.rs
server/: Cargo.toml  Dockerfile  Rocket.toml
server/src/: data.rs  errors.rs  main.rs  rating.rs  response.rs  types.rs
server_node/: Dockerfile  main.js  package-lock.json  package.json
simple-market/: Cargo.toml  bench.txt
simple-market/command/: bench.sh  build.sh  run.sh  test.sh
simple-market/latest/: 0_nn.mmd  0_nn_small.mmd  1.dna  1_nn.mmd  1_nn_small.mmd  2.dna  2_nn.mmd  2_nn_small.mmd  3_nn.mmd  3_nn_small.mmd  4_nn.mmd  4_nn_small.mmd  last_best.dna
simple-market/src/: action.rs  bench.rs  best.dna  charts.rs  compute.rs  game.rs  main.rs  misc.rs  nn.rs  play_game.rs  reduce_nn.rs  run.rs  test.rs  write_mermaid.rs
simple-market/test/: 1_nn.mmd  1_nn_small.mmd  2_nn.mmd
simple-market/test/1/: nn.mmd  nn_small.mmd
simple-market/test/2/: nn.mmd  nn_small.mmd
snake/client/: Cargo.toml
snake/client/src/: main.rs
snake/server/: Cargo.toml  Dockerfile
snake/server/src/: main.rs
tests/: Cargo.toml  README.md
tests/src/: api_request_data.rs  api_response.rs  main.rs  play.rs  types.rs  user.rs
tests/src/api/: data.rs  mod.rs  (+1 more)
(+19 files in other folders)
