[package]
name = "server"
version = "0.1.0"
authors = ["loicbourgois <loic@bourgois.pro>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
rocket_cors = "0.5.0-beta-2"
rocket_contrib = "0.4.2"
serde = "1.0"
serde_derive = "1.0"
syn = "0.15.43"
