[package]
name = "server"
version = "0.1.0"
authors = ["loicbourgois <loic@bourgois.pro>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
rocket_cors = "0.5.0-beta-2"
serde = "1"
serde_derive = "1"
postgres = "0.15"
jsonwebtoken = "5"
bcrypt = "0.4"
libc = "0.2.60"
syn = "0.15.43"
glicko2 = "0.3.0"
error-chain = "0.12.1"
rand = "0.6.0"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["postgres_pool", "json"]
