[package]
name = "game_luck_server"
version = "0.1.0"
authors = ["loicbourgois <loic@bourgois.pro>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ws = "*"
serde = "1"
serde_json = "1"
serde_derive = "1"
reqwest = "0.9"
failure = "0.1.5"
rand = "*"
